# sax-trading

./: .gitignore  LICENSE  README.md  SCRAPER-ISSUES.md  STARTUP-GUIDE.md  TRADING212-SETUP.md  start-with-scraper.sh
exchange-backend/: CMakeLists.txt  http_server.cpp  http_server.hpp  main.cpp  test_stocks.sh
exchange-frontend/: package-lock.json  package.json
exchange-frontend/src/: HomePage.js  StocksTable.js
scraper/: README.md  package.json  server.js
